--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.SmartQueue"
         tools:targetApi="31">
         <activity
+            android:name=".main.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".auth.SignupActivity"
             android:exported="false">
             <meta-data
@@ -24,7 +27,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".auth.MainActivity"
+            android:name=".auth.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
