--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,21 @@
         android:theme="@style/Theme.SmartQueue"
         tools:targetApi="31">
         <activity
+            android:name=".main.ProfileEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".main.CloserAppointmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".main.RescheduleAppointmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".main.CancelAppointmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".main.AppointmentManagementActivity"
+            android:exported="false" />
+        <activity
             android:name=".main.HomeActivity"
             android:exported="false" />
         <activity
